--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -32,7 +32,9 @@ footer, header, hgroup, menu, nav, section {
 body {
 	line-height: 1;
 }
-
+html {
+    scroll-behavior: smooth; /* Ensures smooth scrolling for anchor links */
+}
 ol, ul {
 	list-style: none;
 }
@@ -140,7 +142,7 @@ input, select, textarea {
 		-webkit-transition: color 0.2s ease, border-bottom-color 0.2s ease;
 		-ms-transition: color 0.2s ease, border-bottom-color 0.2s ease;
 		transition: color 0.2s ease, border-bottom-color 0.2s ease;
-		border-bottom: dotted 1px;
+		border-bottom: dotted 1px white;
 		color: inherit;
 		text-decoration: none;
 	}
@@ -1859,7 +1861,7 @@ input, select, textarea {
 		input[type="email"]:focus,
 		select:focus,
 		textarea:focus {
-			box-shadow: 0 0 0 2px #21b2a6;
+			box-shadow: 0 0 0 2px  #063b59;
 		}
 
 	select {
@@ -2078,15 +2080,15 @@ input, select, textarea {
 			}
 
 		.icon.style1 {
-			color: #00ffcc;
+			color: #0862ac;
 		}
 
 		.icon.style2 {
-			color: #00f0ff;
+			color: #090110;
 		}
 
 		.icon.style3 {
-			color: #76ddff;
+			color: #0862ac;
 		}
 
 /* Image */
@@ -2348,7 +2350,7 @@ input, select, textarea {
 		}
 
 			table tbody tr:nth-child(2n + 1) {
-				background-color: rgba(144, 144, 144, 0.25);
+				background-color: rgba(9, 0, 0, 0.25);
 			}
 
 		table td {
@@ -2439,7 +2441,7 @@ input, select, textarea {
 		input[type="button"]:hover,
 		button:hover,
 		.button:hover {
-			background-color: rgba(144, 144, 144, 0.25);
+			background-color: rgba(47, 84, 234, 0.25);
 		}
 
 		input[type="submit"]:active,
@@ -2447,7 +2449,7 @@ input, select, textarea {
 		input[type="button"]:active,
 		button:active,
 		.button:active {
-			background-color: rgba(144, 144, 144, 0.5);
+			background-color: rgba(43, 33, 229, 0.5);
 		}
 
 		input[type="submit"].icon:before,
@@ -2487,7 +2489,7 @@ input, select, textarea {
 		input[type="button"].primary,
 		button.primary,
 		.button.primary {
-			background-color: #ed4933;
+			background-color: #063b59;
 			box-shadow: none !important;
 			color: #ffffff !important;
 		}
@@ -2497,7 +2499,7 @@ input, select, textarea {
 			input[type="button"].primary:hover,
 			button.primary:hover,
 			.button.primary:hover {
-				background-color: #ef5e4a !important;
+				background-color: #6a96c2 !important;
 			}
 
 			input[type="submit"].primary:active,
@@ -2563,7 +2565,7 @@ input, select, textarea {
 		}
 
 			.features li:nth-child(1) {
-				background-color: rgba(0, 0, 0, 0.035);
+				background-color: rgba(11, 12, 34, 0.035);
 			}
 
 			.features li:nth-child(2) {
@@ -2604,7 +2606,7 @@ input, select, textarea {
 
 			.features li:before {
 				display: block;
-				color: #00ffcc;
+				color: #0862ac;
 				position: absolute;
 				left: 1.75em;
 				top: 2.75em;
@@ -2817,7 +2819,7 @@ input, select, textarea {
 		}
 
 		.wrapper.style1 {
-			background-color: #21b2a6;
+			background-color: #063b59;
 			color: #c8ece9;
 		}
 
@@ -2830,7 +2832,7 @@ input, select, textarea {
 			}
 
 			.wrapper.style1 hr {
-				border-color: rgba(0, 0, 0, 0.125);
+				border-color: rgba(52, 41, 1, 0.125);
 			}
 
 			.wrapper.style1 blockquote {
@@ -2871,7 +2873,7 @@ input, select, textarea {
 
 				.wrapper.style1 select option {
 					color: #ffffff;
-					background: #21b2a6;
+					background: #063b59;
 				}
 
 			.wrapper.style1 input[type="checkbox"] + label,
@@ -2887,7 +2889,7 @@ input, select, textarea {
 			.wrapper.style1 input[type="checkbox"]:checked + label:before,
 			.wrapper.style1 input[type="radio"]:checked + label:before {
 				background: #ffffff;
-				color: #21b2a6;
+				color:#063b59;
 			}
 
 			.wrapper.style1 ::-webkit-input-placeholder {
@@ -2976,11 +2978,11 @@ input, select, textarea {
 			}
 
 		.wrapper.style2 {
-			background-color: #2e3842;
+			background-color: #063b59;
 		}
 
 		.wrapper.style3 {
-			background-color: #505393;
+			background-color:  #063b5900;
 			color: #d3d4e4;
 		}
 
@@ -3139,11 +3141,11 @@ input, select, textarea {
 			}
 
 		.wrapper.style4 {
-			background-color: transparent;
+			background-color:  #063b59;
 		}
 
 		.wrapper.style5 {
-			background-color: #ffffff;
+			background-color:  #063b59;
 			color: #4E4852;
 		}
 
@@ -3351,7 +3353,7 @@ input, select, textarea {
 		-ms-transition: -ms-transform 0.5s ease;
 		transition: transform 0.5s ease;
 		-webkit-overflow-scrolling: touch;
-		background: #21b2a6;
+		background:  #063b59;
 		color: #ffffff;
 		height: 100%;
 		max-width: 80%;
@@ -3445,7 +3447,7 @@ input, select, textarea {
 		-webkit-transition: background-color 0.2s ease;
 		-ms-transition: background-color 0.2s ease;
 		transition: background-color 0.2s ease;
-		background: #2e3842;
+		background:  #0f7cba;
 		height: 3em;
 		left: 0;
 		line-height: 3em;
@@ -3886,7 +3888,7 @@ input, select, textarea {
 
 	#footer {
 		padding: 6em 0 4em 0 ;
-		background-color: #1d242a;
+		background-color:  #063b59;
 		text-align: center;
 	}
 
